# receipt-bot

./: .dockerignore  .env.example  .gitignore  @fix_plan.md  AGENT.md  CLOUD_RUN_SETUP.md  DEPLOYMENT.md  Dockerfile  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PRD.md  PROGRESS.md  PROMPT.md  RAILWAY_DEPLOY.md  README.md  TESTING.md  cloudbuild.yaml  go.mod  go.sum  railway.toml
.claude/: settings.local.json
.ralph/: .circuit_breaker_state  .claude_session_id  .exit_signals  .ralph_session  .ralph_session_history  .response_analysis  @AGENT.md  @fix_plan.md  PROMPT.md  progress.json  status.json
.ralph/specs/: 01-auto-categorization.md  02-ingredient-matching.md  03-export-notion-obsidian.md  (+2 more)
cmd/bot/: main.go
deployments/: docker-compose.yml  go-service.Dockerfile  python-service.Dockerfile
proto/: Makefile  scraper.pb.go  scraper.proto
python-service/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  railway.toml  requirements.txt  run.sh  run_server.py
python-service/src/: __init__.py  scraper_pb2.py  scraper_pb2_grpc.py
python-service/src/grpc_server/: __init__.py  server.py  servicers.py
python-service/src/scrapers/: base.py  factory.py  instagram.py  tiktok.py  web.py  youtube.py
python-service/src/utils/: cleanup.py  url_parser.py
python-service/src/video/: __init__.py  audio_extractor.py  downloader.py  transcriber.py
python-service/src/video/transcription_providers/: __init__.py  elevenlabs_stt.py  google_stt.py  whisper_provider.py
scripts/: deploy.sh  docker-logs.sh  docker-start.sh  docker-stop.sh  run-bot.sh
specs/: api.md  architecture.md  requirements.md
terraform/: main.tf  terraform.tfvars.example  variables.tf
(+62 files in other folders)
